<resources>
    <string name="app_name">Finan.ciel</string>
    <string name="title_search">Search</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_settings">Settings</string>
    <string name="query">Enter your query</string>
    <string name="efficiency">Efficiency</string>
    <string name="net_income_to_revenue">Net Income / Revenue</string>
    <string name="returns">Returns</string>
    <string name="return_on_assets">Return on Assets (ROA)</string>
    <string name="return_on_equity">Return on Equity (ROE)</string>
    <string name="bankrupt">Bankrupt analysis</string>
    <string name="quick_ratio">Quick Ratio</string>
    <string name="current_ratio">Current Ratio</string>
    <string name="debt_to_equity">Debt / Equity</string>
    <string name="analysis_empty">No share is selected. To fix this, go to \"Search panel\" and select any share
    </string>
</resources>