<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.analysis.AnalysisFragment"
            android:orientation="vertical"
    >

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/share_name" android:textAlignment="center"/>
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/share_ticker"
                      android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                      android:id="@+id/share_industry"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/efficiency" android:textAlignment="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_income_to_revenue"
                      android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                      android:id="@+id/net_income_to_revenue"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/returns" android:textAlignment="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/return_on_assets"
                      android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                      android:id="@+id/return_on_assets"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/return_on_equity"
                      android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                      android:id="@+id/return_on_equity"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/bankrupt" android:textAlignment="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quick_ratio"
                      android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                      android:id="@+id/quick_ratio"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/current_ratio"
                      android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                      android:id="@+id/current_ratio"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debt_to_equity"
                      android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                      android:id="@+id/debt_to_equity"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <View android:layout_width="match_parent" android:layout_height="@dimen/bottom_navigation_height"/>

    </LinearLayout>
</ScrollView>